# polars-bio-ballista-poc

./: Cargo.toml  EXPERIMENTS.md  README.md
docs/: README.md
docs/add-ballista-distributed-execution-poc/: report.md
fixtures/: README.md
fixtures/e1/: left.parquet  right.parquet
scripts/: run-local-compare-overlap-modes.sh  run-local-e1.sh  run-local-e2.sh  run-local-e3.sh  run-local-e4-a.sh  run-local-e5-b.sh  run-local.sh
src/: codec.rs  fixtures.rs  lib.rs  main.rs  operation.rs  overlap.rs
