[package]
name = "polars-bio-ballista-poc"
version = "0.1.0"
edition = "2021"
default-run = "query"

[dependencies]
anyhow = "1"
ballista = { version = "52.0.0", default-features = false }
ballista-executor = { version = "52.0.0", default-features = false }
ballista-scheduler = { version = "52.0.0", default-features = false }
clap = { version = "4.5", features = ["derive"] }
datafusion = "52"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
