[package]
name = "polars-bio-ballista-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
ballista = { git = "https://github.com/apache/datafusion-ballista.git", rev = "38ef6004f64b5aa14a5d8e8765d94f716b796fbc", default-features = false }
ballista-core = { git = "https://github.com/apache/datafusion-ballista.git", rev = "38ef6004f64b5aa14a5d8e8765d94f716b796fbc", default-features = false }
ballista-executor = { git = "https://github.com/apache/datafusion-ballista.git", rev = "38ef6004f64b5aa14a5d8e8765d94f716b796fbc", default-features = false }
ballista-scheduler = { git = "https://github.com/apache/datafusion-ballista.git", rev = "38ef6004f64b5aa14a5d8e8765d94f716b796fbc", default-features = false }
clap = { version = "4.5", features = ["derive"] }
datafusion = { version = "=53.1.0", default-features = false, features = ["nested_expressions", "crypto_expressions", "datetime_expressions", "encoding_expressions", "regex_expressions", "string_expressions", "unicode_expressions", "parquet", "recursive_protection", "sql"] }
datafusion-bio-function-ranges = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", rev = "35a6a6e41c6212c8e031d3beb7f917591e589475" }
datafusion-proto = "=53.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
